fixing spacing

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -52,7 +52,7 @@ a {
   justify-content: center;
   align-items: center;
   max-width: 400px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 
 .main {
